<resources>

    <string name="app_name">BPHC Freshers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="campus_info">Campus Info</string>
    <string name="history">History</string>
    <string name="clubs_and_departments">Clubs and Departments</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="username"> User </string>
    <string name="emailid"> f201xxxx@hyderabad.bits-pilani.ac.in </string>

    <string name="timing1">8-9</string>
    <string name="timing2">9-10</string>
    <string name="timing3">10-11</string>
    <string name="timing4">11-12</string>
    <string name="timing5">12-1</string>
    <string name="timing6">1-2</string>
    <string name="timing7">2-3</string>
    <string name="timing8">3-4</string>
    <string name="timing9">4-5</string>
    <string name="timing10">5-6</string>

    <string name="monday"> MON </string>
    <string name="tuesday"> TUE </string>
    <string name="wednesday"> WED </string>
    <string name="thursday"> THU </string>
    <string name="friday"> FRI </string>
    <string name="saturday"> SAT </string>

    <string name="timing_breakfast"> 7:30am-9:30am </string>
    <string name="timing_lunch"> 11:30am-2:00pm </string>
    <string name="timing_snacks"> 4:30pm-6:00pm </string>
    <string name="timing_dinner"> 7:30pm-9:30pm </string>

    <string name="layoutWidth"> 59dp </string>

    <string-array name="titleList">
        <item> TimeTable </item>
        <item> Subjects </item>
    </string-array>

    <string-array name="descriptionList">
        <item> Check out all your classes and their rooms and timings </item>
        <item> Check out all the courses you are enrolled to </item>
    </string-array>
    <string name="title_activity_history">History</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_bphcmap">Map</string>
    <string name="app_id">1216868208493684</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy_sell_bphc"><![CDATA[Buy&Sell@BPHC]]></string>
    <string name="title_activity_bphcmaps">Map</string>
    <string name="cruxhead">Head: Samkit Jain
mail: crux@hyderabad.bits-pilani.ac.in
Whatsapp: 9705601217
Mobile: 9705601217</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_elas">elas</string>
    <string name="cookingdetail"><![CDATA[Are you a foodie? Do you love to cook? Do you love gathering with friends over a great meal! It\'s a great way to deepen your friendships while enjoying terrific food. This is the place for all food lovers. We emerged as a club from cooking & culinary activities society after a stint of successful endeavours. We arrange talks, workshops from renowned chefs and entrepreneurs of the cooking field. Also, playing an appreciable role in arranging stalls during fests and special occasions.]]></string>


</resources>
